# 370-Class-Project

./: CMakeLists.txt  a.out  main.cpp  server.c
lib/: Client.h  ClientFrontend.h  ClientHandler.h  ConnectionHandler.h  Server.h
modeling/: Sequence.puml  architecture.puml  clientdiagram.puml  network.puml  serverdiagram.puml
src/: ChatClient.cpp  Client.cpp  ClientFrontend.cpp  ClientHandler.cpp  ConnectionHandler.cpp  Server.cpp  main.cpp  test_client.cpp
